# bech32

./: Cargo.toml  LICENSE  Makefile  README.md
src/: lib.rs  main.rs
